--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBRBNFNmac0fFPuD0oKxT1J7_urD12ynxI" />
+            android:value="API_KEY_HERE" />
     </application>
 
 </manifest>
