--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
             android:exported="true" />
         <activity
             android:name=".DashboardActivity"
-            android:exported="true" />
+            android:exported="true" >
+
+        </activity>
         <activity
             android:name=".LocationActivity"
             android:exported="false" />
@@ -64,7 +66,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="Your_Api_Key" />
+            android:value="Your_API_KEY" />
     </application>
 
 </manifest>
